--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-__pycache__/
+# Python
+venv/
 .venv/
-dist/
-.build/
-.coverage
-htmlcov/
+__pycache__/
 *.pyc
-.DS_Store
-.env
-.envrc
+
+# tooling caches / build artefacts
+.mypy_cache/
+.ruff_cache/
+.pytest_cache/
+dist/
+build/
+*.egg-info/
+.pipeline/
