--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,23 @@
+exclude: |
+  ^(venv/|\.venv/|build/|dist/|.*\.egg-info/|\.mypy_cache/|\.ruff_cache/)
+
 repos:
-- repo: https://github.com/psf/black
-  rev: 24.8.0
-  hooks: [{id: black}]
-- repo: https://github.com/charliermarsh/ruff-pre-commit
-  rev: v0.6.9
-  hooks: [{id: ruff}]
-- repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v1.11.2
-  hooks: [{id: mypy}]
+  - repo: https://github.com/psf/black
+    rev: 24.8.0
+    hooks:
+      - id: black
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.6.8
+    hooks:
+      - id: ruff
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.11.2
+    hooks:
+      - id: mypy
+        args: ["--config-file=pyproject.toml"]
+        files: ^(src/|tests/)
+        additional_dependencies:
+          - click>=8
+          - rich>=13
